# feanor-serde

./: Cargo.toml  Readme.md
src/: dependent_tuple.rs  lib.rs  newtype_struct.rs  rust_enum.rs  rust_struct.rs  seq.rs
