[package]
name = "feanor-serde"
version = "0.1.3"
edition = "2021"
authors = ["Simon Pohmann <simon@pohmann.de>"]

repository = "https://github.com/FeanorTheElf/feanor-serde"
homepage = "https://github.com/FeanorTheElf/feanor-serde"
readme = "Readme.md"
license = "MIT"
keywords = ["serde", "serialization"]
description = "A library extending serde by some utilities for working with DeserializeSeeds"

[lib]
crate-type = ["rlib"]
bench = true

[dependencies]
serde = { version = "1.0.207", features = ["derive"] }

[dev-dependencies]
serde_assert = "0.8.0"
serde_json = "1.0.125"
postcard = { version = "1.1.3", features = ["use-std"] }

[package.metadata.docs.rs]
all-features = true
